fix alignment of timeline

--- a/site.less
+++ b/site.less
@@ -65,6 +65,10 @@ html, body, .canvas {
         box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
         background: @background-2;
 
+        @media(min-width: 340px) {
+            margin: 24px auto;
+        }
+
         > .img-container {
             display: block;
             position: relative;
